# libnemo_normalize

./: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  configure.ac  configure~  export_far.sh  nemo_normalize.cpp  nemo_normalize.pc.in  test_normalize.c
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  debhelper-build-stamp  files  libnemo-normalize-data.install  libnemo-normalize-dev.install  libnemo-normalize.install  libnemo-normalize.substvars  not-installed  rules
debian/.debhelper/libnemo-normalize/: dbgsym-build-ids
debian/.debhelper/libnemo-normalize/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/libnemo-normalize/dbgsym-root/usr/share/doc/: libnemo-normalize-dbgsym
debian/libnemo-normalize-data/DEBIAN/: control  md5sums
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/ar_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/de_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/en_itn_grammars_cased/classify/: tokenize_and_classify.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/en_tn_grammars_cased/verbalize/: post_process.far  verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/es_en_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/es_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/fr_tn_grammars_cased/classify/: tokenize_and_classify.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/hu_tn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/hy_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/ja_tn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/mr_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/pt_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize-data/usr/share/nemo-normalize/far_export/ru_itn_grammars_cased/verbalize/: verbalize.far
debian/libnemo-normalize/DEBIAN/: control  md5sums
debian/libnemo-normalize/usr/include/: nemo_normalize.h
far_export/ar_itn_grammars_cased/classify/: tokenize_and_classify.far
far_export/de_tn_grammars_cased/verbalize/: verbalize.far
far_export/fr_tn_grammars_cased/verbalize/: verbalize.far
far_export/he_itn_grammars_cased/classify/: tokenize_and_classify.far
far_export/he_itn_grammars_cased/verbalize/: verbalize.far
far_export/hi_itn_grammars_cased/verbalize/: verbalize.far
far_export/hi_tn_grammars_cased/verbalize/: post_process.far  verbalize.far
far_export/hy_itn_grammars_cased/classify/: tokenize_and_classify.far
far_export/ja_itn_grammars_cased/classify/: tokenize_and_classify.far
far_export/ja_itn_grammars_cased/verbalize/: post_process.far  verbalize.far
far_export/ja_tn_grammars_cased/classify/: tokenize_and_classify.far
far_export/mr_itn_grammars_cased/classify/: tokenize_and_classify.far
far_export/pt_itn_grammars_cased/classify/: tokenize_and_classify.far
far_export/rw_tn_grammars_cased/classify/: tokenize_and_classify.far
far_export/rw_tn_grammars_cased/verbalize/: verbalize.far
far_export/sv_itn_grammars_cased/verbalize/: verbalize.far
far_export/sv_tn_grammars_cased/verbalize/: verbalize.far
far_export/vi_tn_grammars_cased/verbalize/: post_process.far  verbalize.far
far_export/zh_itn_grammars_cased/classify/: tokenize_and_classify.far
scripts/: generate-changelog.sh
(+5 files in other folders)
